Update to Paper 26.1.1